# strava_route_printer

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
backend/: README.md  config.py  main.py  models.py  pyproject.toml  route_file.py  strava_client.py  strava_oauth.py  token_store.py
frontend/: .env.example  README.md  index.html  package-lock.json  package.json
frontend/src/: App.tsx  vite-env.d.ts
frontend/src/components/: AuthLanding.tsx  MapView.tsx  MapboxStaticImage.tsx  PrintComposer.tsx  PrintableRoute.tsx  RouteSearch.tsx  StatsPanel.tsx  ThemeSelector.tsx
frontend/src/services/: api.ts  mapExport.ts
frontend/src/styles/: main.css
frontend/src/themes/: index.ts  themes.ts
frontend/src/types/: index.ts
frontend/src/utils/: decodePolyline.ts  image.ts  stats.ts
mapbox_styles/: blueprint.json  forest.json  neon_tokyo.json  noir.json
